# axi-packaging-and-linux-driver

./: 1_axi_packaging.md  2_baremetal_driver.md  3_linux_driver.md  LICENSE  LICENSE.txt  README.md
reference_files/application/: application_bm.c  application_bm.h
reference_files/baremetal_driver/data/: axi_1wire_host.mdd  axi_1wire_host.tcl  axi_1wire_host.yaml
reference_files/baremetal_driver/src/: CMakeLists.txt  Makefile  axi_1wire_host.c  axi_1wire_host.h  axi_1wire_host_selftest.c
reference_files/constraints/: axi_1wire_host.xdc
reference_files/hdl/: axi_1wire_host.v  axi_1wire_host_slave_lite_v1_2_S00_AXI.v  clk_div.v  jcnt.v  sr.v  w1_master.v
reference_files/linux_driver/: amd_axi_w1.c  w1chardev.c  xlnxw1-app.c
